--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,7 @@
 # Uncomment the next line to define a global platform for your project
 platform :ios, '9.0'
+
+pod 'Firebase/Firestore'
 pod 'GoogleMaps'
 
 target 'Runner' do
